# kubesentinel

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  make.ps1  pyproject.toml  requirements.txt
.claude/agents/: backend-engineer.md  devops-engineer.md  reviewer.md
.github/workflows/: ci.yml
agent/: cli.py  graph.py  settings.py  state.py  webhook.py
agent/llm/: __init__.py  factory.py
agent/nodes/: __init__.py  _logging.py  escalate.py  investigate.py  prepare_retry.py  reason.py  receive.py  remediate.py  report.py  routing.py  search.py
agent/rag/: cli.py  ingest.py  migrate.py  retriever.py  settings.py
agent/rag/migrations/: 001_create_runbooks.sql
agent/tools/: __init__.py  base.py  mocks.py  real.py  safety.py  slack_approval.py
agent/tools/fixtures/: scenarios.yaml
app/sacrificial/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: PROJECT_HANDOFF.md  agent-architecture.md  architecture.md  demo-flow.md  demo-recording-guide.md  metrics.md  rag-architecture.md  resume-content.md  safety-boundaries.md
docs/runbooks/: configmap-misconfiguration.md  crashloopbackoff.md  disk-pressure-eviction.md  high-error-rate.md  high-latency.md  imagepullbackoff.md  node-not-ready.md  oomkilled-pod.md
infra/helm/: values.yaml
infra/k8s/: namespace.yaml  prometheus-rules.yaml  sacrificial-deployment.yaml  sacrificial-service.yaml  sacrificial-servicemonitor.yaml
infra/kind/: cluster.yaml
tests/agent/: conftest.py  test_graph_imagepull.py  test_graph_oomkilled.py  test_mocks.py  test_routing.py  test_state.py
tests/cli/: test_cli_live.py
tests/rag/: test_chunker.py  test_ingest.py  test_retriever.py
tests/tools/: test_real_toolkit.py  test_safety.py  test_slack_approval.py
