[project]
name = "kubesentinel"
version = "0.1.0"
description = "Autonomous AI SRE agent that detects, diagnoses, and remediates Kubernetes failures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Webhook receiver (Phase 1)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    # Agent framework (Phase 2+)
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Kubernetes client (Phase 2+)
    "kubernetes>=31.0.0",
    # GitHub client (Phase 2+)
    "PyGithub>=2.0.0",
    # Slack client (Phase 2+)
    "slack-sdk>=3.0.0",
    # Vector store (Phase 2+)
    "supabase>=2.0.0",
    "pgvector>=0.3.0",
    # RAG pipeline (Phase 2)
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    "python-frontmatter>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
